Add catppuccin -  and theme-switcher (MVP)

--- a/.config/hypr/conf/keybindings.conf
+++ b/.config/hypr/conf/keybindings.conf
@@ -21,9 +21,10 @@ bind = $mainMod SHIFT, Q, exec, wlogout
 
 bind = $mainMod CTRL, E, exec, rofimoji --action copy                 # Emoji
 
-# Quick rofi open
+# Scripts 
 bind = $mainMod, R, exec, ~/dotfiles/global/scripts/bookworm.sh # Open books quick
-bind = $mainMod CTRL, T, exec, ~/.config/waybar/scripts/switch-theme.sh # waybar switch theme
+bind = $mainMod CTRL, B, exec, ~/.config/waybar/scripts/switch-theme.sh # waybar switch theme
+bind = $mainMod, T, exec, ~/dotfiles/global/scripts/update-settings-and-switch.sh
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, B, exec, $browser
@@ -33,7 +34,7 @@ bind = $mainMod CTRL, RETURN, exec, $menu
 bind = $mainMod, W, exec, $wallpaper
 bind = $mainMod SHIFT, W, exec, waypaper --random                                         # Change the wallpaper
 
-bind = $mainMod, T, togglefloating,
+bind = $mainMod, F, togglefloating,
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, P, pseudo, # dwindle
