Add catppuccin mocha theme

--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -12,3 +12,5 @@ exec-once = ~/.config/hypr/scripts/gtk.sh
 # Cursor
 exec-once = hyprctl setcursor Bibata-Modern-Ice 24
 
+# Load cliphist history
+exec-once = wl-paste --watch cliphist store
