--- a/.config/hypr/conf/deco.conf
+++ b/.config/hypr/conf/deco.conf
@@ -31,6 +31,10 @@
 #
 source = ~/.config/hypr/conf/deco-general.conf
 
+binds {
+    workspace_back_and_forth = true
+}
+
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
     rounding = 5
