--- a/.config/hypr/conf/keybindings.conf
+++ b/.config/hypr/conf/keybindings.conf
@@ -17,14 +17,14 @@ bind = $SUPER_SHIFT, l, exec, hyprlock
 bind = $mainMod SHIFT, L, exec, loginctl lock-session && systemctl suspend # I will them later
 
 bind = $mainMod SHIFT, Q, exec, wlogout
-
-
 bind = $mainMod CTRL, E, exec, rofimoji --action copy                 # Emoji
 
 # Scripts 
 bind = $mainMod, R, exec, ~/dotfiles/global/scripts/bookworm.sh # Open books quick
 bind = $mainMod CTRL, B, exec, ~/.config/waybar/scripts/switch-theme.sh # waybar switch theme
-bind = $mainMod, T, exec, ~/dotfiles/global/scripts/update-settings-and-switch.sh
+bind = $mainMod SHIFT, B, exec, ~/.config/waybar/scripts/switch-bar.sh # waybar switch bar
+bind = $mainMod, T, exec, ~/dotfiles/global/scripts/update-settings-and-switch.sh # The switch
+bind = $mainMod, V, exec, ~/dotfiles/global/scripts/clipboard-history.sh # rofi clipboard history
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, B, exec, $browser
