--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
 folder = ~/wallpaper
-wallpaper = ~/wallpaper/fog_forest_alt_2.png
+wallpaper = ~/wallpaper/space.png
 backend = swww
 monitors = All
 fill = fill
