Add gruvbox theme

--- a/.config/hypr/conf/keybindings.conf
+++ b/.config/hypr/conf/keybindings.conf
@@ -25,6 +25,7 @@ bind = $mainMod CTRL, B, exec, ~/.config/waybar/scripts/switch-theme.sh # waybar
 bind = $mainMod SHIFT, B, exec, ~/.config/waybar/scripts/switch-bar.sh # waybar switch bar
 bind = $mainMod, T, exec, ~/dotfiles/global/scripts/update-settings-and-switch.sh # The switch
 bind = $mainMod, V, exec, ~/dotfiles/global/scripts/clipboard-history.sh # rofi clipboard history
+bind = $mainMod, PRINT, exec, ~/dotfiles/global/scripts/screenshot.sh # take screenshot
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, B, exec, $browser
