--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
 folder = ~/wallpaper
-wallpaper = ~/wallpaper/space.png
+wallpaper = ~/wallpaper/a_person_in_a_hat_standing_in_a_room_with_windows.png
 backend = swww
 monitors = All
 fill = fill
