Add matugen dynamic theme

--- a/.config/hypr/conf/deco-general.conf
+++ b/.config/hypr/conf/deco-general.conf
@@ -1,15 +1,15 @@
-# gruvbox
+# Matugen
 general {
     gaps_in = 2
     gaps_out = 5
 
     border_size = 2
 
-    # Active window (yellow)
-    col.active_border = rgba(215,153,33,1)
 
-    # Inactive window (dark gray)
-    col.inactive_border = rgba(60,56,54,1)
+    col.active_border = rgba(99d4a3aa)
+
+    col.inactive_border = rgba(101510aa)
+
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
