--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -1,50 +1,32 @@
-# gruvbox dark by morhetz, https://github.com/morhetz/gruvbox
-# This work is licensed under the terms of the MIT license.
-# For a copy, see https://opensource.org/licenses/MIT.
+# Matugen Generated
 
-# 235_bg, 223_fg1
-background #282828
-foreground #ebdbb2
+background            #101510
+foreground            #dfe4dc
 
-# 245_gray, 237_bg1
-selection_foreground #928374
-selection_background #3c3836
+selection_foreground  #c1c9bf
+selection_background  #262b26
 
-# 229_fg0, 236_bg0_s
-cursor            #fbf1c7
-cursor_text_color #32302f
+cursor                #dfe4dc
+cursor_text_color     #101510
 
-# 208_orange
-url_color #fe8019
+url_color             #99d4a3
 
-# 235_bg, 241_bg3
-color0 #282828
-color8 #665c54
+# Normal colors
+color0  #101510               
+color1  #ffb595                   
+color2  #9fd49c                 
+color3  #a2ced8              
+color4  #99d4a3               
+color5  #b7ccb7             
+color6  #394b3b   
+color7  #c1c9bf    
 
-# 124_red, 167_red
-color1 #cc241d
-color9 #fb4934
-
-# 106_green, 142_green
-color2  #98971a
-color10 #b8bb26
-
-# 172_yellow, 214_yellow
-color3  #d79921
-color11 #fabd2f
-
-# 72_aqua, 109_blue
-color4  #689d6a
-color12 #83a598
-
-# 132_purple, 175_purple
-color5  #b16286
-color13 #d3869b
-
-# 72_aqua, 108_aqua
-color6  #689d6a
-color14 #8ec07c
-
-# 246_gray, 245_gray
-color7  #a89984
-color15 #928374
+# Bright colors
+color8  #414941       
+color9  #93000a       
+color10 #326941       
+color11 #204d56    
+color12 #17512b     
+color13 #394b3b   
+color14 #dfe4dc       
+color15 #dfe4dc            
