--- a/.config/kitty/themes/matugen.conf
+++ b/.config/kitty/themes/matugen.conf
@@ -1,32 +1,32 @@
 # Matugen Generated
 
-background            #101510
-foreground            #dfe4dc
+background            #121318
+foreground            #e3e1e9
 
-selection_foreground  #c1c9bf
-selection_background  #262b26
+selection_foreground  #c6c5d0
+selection_background  #292a2f
 
-cursor                #dfe4dc
-cursor_text_color     #101510
+cursor                #e3e1e9
+cursor_text_color     #121318
 
-url_color             #99d4a3
+url_color             #b7c4ff
 
 # Normal colors
-color0  #101510               
-color1  #ffb595                   
-color2  #9fd49c                 
-color3  #a2ced8              
-color4  #99d4a3               
-color5  #b7ccb7             
-color6  #394b3b   
-color7  #c1c9bf    
+color0  #121318               
+color1  #ffb2b9                   
+color2  #95d5a7                 
+color3  #e4bad9              
+color4  #b7c4ff               
+color5  #c2c5dd             
+color6  #424659   
+color7  #c6c5d0    
 
 # Bright colors
-color8  #414941       
+color8  #45464f       
 color9  #93000a       
-color10 #326941       
-color11 #204d56    
-color12 #17512b     
-color13 #394b3b   
-color14 #dfe4dc       
-color15 #dfe4dc            
+color10 #4e5b92       
+color11 #5c3d56    
+color12 #364479     
+color13 #424659   
+color14 #e3e1e9       
+color15 #e3e1e9            
