--- a/.config/matugen/templates/hypr-gen/hypr-gen.conf
+++ b/.config/matugen/templates/hypr-gen/hypr-gen.conf
@@ -6,9 +6,9 @@ general {
     border_size = 2
 
 
-    col.active_border = rgba(b7c4ffaa)
+    col.active_border = rgba({{colors.primary.default.hex_stripped}}aa)
 
-    col.inactive_border = rgba(121318aa)
+    col.inactive_border = rgba({{colors.surface.default.hex_stripped}}aa)
 
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
