Create Custom nvim setup

--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -1,32 +1,50 @@
-# Matugen Generated
+# gruvbox dark by morhetz, https://github.com/morhetz/gruvbox
+# This work is licensed under the terms of the MIT license.
+# For a copy, see https://opensource.org/licenses/MIT.
 
-background            #121318
-foreground            #e3e1e9
+# 235_bg, 223_fg1
+background #282828
+foreground #ebdbb2
 
-selection_foreground  #c6c5d0
-selection_background  #292a2f
+# 245_gray, 237_bg1
+selection_foreground #928374
+selection_background #3c3836
 
-cursor                #e3e1e9
-cursor_text_color     #121318
+# 229_fg0, 236_bg0_s
+cursor            #fbf1c7
+cursor_text_color #32302f
 
-url_color             #b7c4ff
+# 208_orange
+url_color #fe8019
 
-# Normal colors
-color0  #121318               
-color1  #ffb2b9                   
-color2  #95d5a7                 
-color3  #e4bad9              
-color4  #b7c4ff               
-color5  #c2c5dd             
-color6  #424659   
-color7  #c6c5d0    
+# 235_bg, 241_bg3
+color0 #282828
+color8 #665c54
 
-# Bright colors
-color8  #45464f       
-color9  #93000a       
-color10 #4e5b92       
-color11 #5c3d56    
-color12 #364479     
-color13 #424659   
-color14 #e3e1e9       
-color15 #e3e1e9            
+# 124_red, 167_red
+color1 #cc241d
+color9 #fb4934
+
+# 106_green, 142_green
+color2  #98971a
+color10 #b8bb26
+
+# 172_yellow, 214_yellow
+color3  #d79921
+color11 #fabd2f
+
+# 72_aqua, 109_blue
+color4  #689d6a
+color12 #83a598
+
+# 132_purple, 175_purple
+color5  #b16286
+color13 #d3869b
+
+# 72_aqua, 108_aqua
+color6  #689d6a
+color14 #8ec07c
+
+# 246_gray, 245_gray
+color7  #a89984
+color15 #928374
