--- a/.config/kitty/themes/matugen.conf
+++ b/.config/kitty/themes/matugen.conf
@@ -1,32 +1,32 @@
 # Matugen Generated
 
-background            #121318
-foreground            #e3e1e9
+background            #12140e
+foreground            #e2e3d8
 
-selection_foreground  #c6c5d0
-selection_background  #292a2f
+selection_foreground  #c5c8ba
+selection_background  #282b24
 
-cursor                #e3e1e9
-cursor_text_color     #121318
+cursor                #e2e3d8
+cursor_text_color     #12140e
 
-url_color             #b7c4ff
+url_color             #b1d18a
 
 # Normal colors
-color0  #121318               
-color1  #ffb2b9                   
-color2  #95d5a7                 
-color3  #e4bad9              
-color4  #b7c4ff               
-color5  #c2c5dd             
-color6  #424659   
-color7  #c6c5d0    
+color0  #12140e               
+color1  #ffb595                   
+color2  #abd290                 
+color3  #a0d0cc              
+color4  #b1d18a               
+color5  #bfcbad             
+color6  #404a33   
+color7  #c5c8ba    
 
 # Bright colors
-color8  #45464f       
+color8  #44483d       
 color9  #93000a       
-color10 #4e5b92       
-color11 #5c3d56    
-color12 #364479     
-color13 #424659   
-color14 #e3e1e9       
-color15 #e3e1e9            
+color10 #4b662c       
+color11 #1f4e4b    
+color12 #344e16     
+color13 #404a33   
+color14 #e2e3d8       
+color15 #e2e3d8            
