--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
 folder = ~/wallpaper
-wallpaper = ~/wallpaper/3840x2400.jpg
+wallpaper = ~/wallpaper/0419.jpg
 backend = swww
 monitors = All
 fill = fill
