--- a/.config/hypr/conf/deco-general.conf
+++ b/.config/hypr/conf/deco-general.conf
@@ -1,15 +1,15 @@
-# Matugen
+# gruvbox
 general {
     gaps_in = 2
     gaps_out = 5
 
     border_size = 2
 
+    # Active window (yellow)
+    col.active_border = rgba(215,153,33,1)
 
-    col.active_border = rgba(b7c4ffaa)
-
-    col.inactive_border = rgba(121318aa)
-
+    # Inactive window (dark gray)
+    col.inactive_border = rgba(60,56,54,1)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
