Nvim update done - working version - lazy.nvim

--- a/.config/kitty/themes/matugen.conf
+++ b/.config/kitty/themes/matugen.conf
@@ -1,32 +1,32 @@
 # Matugen Generated
 
-background            #12140e
-foreground            #e2e3d8
+background            #0f1417
+foreground            #dee3e6
 
-selection_foreground  #c5c8ba
-selection_background  #282b24
+selection_foreground  #c0c8cc
+selection_background  #262b2d
 
-cursor                #e2e3d8
-cursor_text_color     #12140e
+cursor                #dee3e6
+cursor_text_color     #0f1417
 
-url_color             #b1d18a
+url_color             #8ad0ee
 
 # Normal colors
-color0  #12140e               
-color1  #ffb595                   
-color2  #abd290                 
-color3  #a0d0cc              
-color4  #b1d18a               
-color5  #bfcbad             
-color6  #404a33   
-color7  #c5c8ba    
+color0  #0f1417               
+color1  #ffb2b9                   
+color2  #95d5a7                 
+color3  #c5c3ea              
+color4  #8ad0ee               
+color5  #b4cad5             
+color6  #354a53   
+color7  #c0c8cc    
 
 # Bright colors
-color8  #44483d       
+color8  #40484c       
 color9  #93000a       
-color10 #4b662c       
-color11 #1f4e4b    
-color12 #344e16     
-color13 #404a33   
-color14 #e2e3d8       
-color15 #e2e3d8            
+color10 #0e6681       
+color11 #444364    
+color12 #004d63     
+color13 #354a53   
+color14 #dee3e6       
+color15 #dee3e6            
