--- a/.config/hypr/conf/deco-general.conf
+++ b/.config/hypr/conf/deco-general.conf
@@ -1,15 +1,18 @@
-# gruvbox
+# solarized
 general {
     gaps_in = 2
     gaps_out = 5
 
     border_size = 2
 
-    # Active window (yellow)
-    col.active_border = rgba(215,153,33,1)
+    # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
+    col.active_border = rgba(b58900aa)
 
-    # Inactive window (dark gray)
-    col.inactive_border = rgba(60,56,54,1)
+    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+
+    col.inactive_border = rgba(063642aa)
+    # col.inactive_border = rgba(595959aa)
+
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
