--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -1,50 +1,40 @@
-# gruvbox dark by morhetz, https://github.com/morhetz/gruvbox
-# This work is licensed under the terms of the MIT license.
-# For a copy, see https://opensource.org/licenses/MIT.
+# vim:ft=kitty
 
-# 235_bg, 223_fg1
-background #282828
-foreground #ebdbb2
+## name:     Osaka Solized
+## author:   Adapted from Osaka Palette
+## blurb:    Deep, dark blue base with vibrant accents.
 
-# 245_gray, 237_bg1
-selection_foreground #928374
-selection_background #3c3836
+# base colors
+foreground            #d0d7df
+background            #0a1a1f
+selection_foreground  #0a1a1f
+selection_background  #d0d7df
 
-# 229_fg0, 236_bg0_s
-cursor            #fbf1c7
-cursor_text_color #32302f
+# cursor
+cursor                #d0d7df
+cursor_text_color     #0a1a1f
 
-# 208_orange
-url_color #fe8019
+# ANSI colors
+color0   #0a1a1f
+color8   #47555f
 
-# 235_bg, 241_bg3
-color0 #282828
-color8 #665c54
+color1   #c0392b
+color9   #e74c3c
 
-# 124_red, 167_red
-color1 #cc241d
-color9 #fb4934
+color2   #7f8c1f
+color10  #a3c940
 
-# 106_green, 142_green
-color2  #98971a
-color10 #b8bb26
+color3   #b58900
+color11  #fdd835
 
-# 172_yellow, 214_yellow
-color3  #d79921
-color11 #fabd2f
+color4   #2176c7
+color12  #42a5f5
 
-# 72_aqua, 109_blue
-color4  #689d6a
-color12 #83a598
+color5   #af3f85
+color13  #f06292
 
-# 132_purple, 175_purple
-color5  #b16286
-color13 #d3869b
+color6   #009688
+color14  #4dd0e1
 
-# 72_aqua, 108_aqua
-color6  #689d6a
-color14 #8ec07c
-
-# 246_gray, 245_gray
-color7  #a89984
-color15 #928374
+color7   #d0d7df
+color15  #ffffff
