--- a/.config/kitty/themes/matugen.conf
+++ b/.config/kitty/themes/matugen.conf
@@ -1,32 +1,32 @@
 # Matugen Generated
 
-background            #0f1417
-foreground            #dee3e6
+background            #14140c
+foreground            #e7e2d5
 
-selection_foreground  #c0c8cc
-selection_background  #262b2d
+selection_foreground  #cbc7b5
+selection_background  #2b2a21
 
-cursor                #dee3e6
-cursor_text_color     #0f1417
+cursor                #e7e2d5
+cursor_text_color     #14140c
 
-url_color             #8ad0ee
+url_color             #d1c973
 
 # Normal colors
-color0  #0f1417               
-color1  #ffb2b9                   
-color2  #95d5a7                 
-color3  #c5c3ea              
-color4  #8ad0ee               
-color5  #b4cad5             
-color6  #354a53   
-color7  #c0c8cc    
+color0  #14140c               
+color1  #ffb595                   
+color2  #b7d085                 
+color3  #a6d0b9              
+color4  #d1c973               
+color5  #ccc8a3             
+color6  #4a482c   
+color7  #cbc7b5    
 
 # Bright colors
-color8  #40484c       
+color8  #49473a       
 color9  #93000a       
-color10 #0e6681       
-color11 #444364    
-color12 #004d63     
-color13 #354a53   
-color14 #dee3e6       
-color15 #dee3e6            
+color10 #656014       
+color11 #274e3d    
+color12 #4d4800     
+color13 #4a482c   
+color14 #e7e2d5       
+color15 #e7e2d5            
